k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: my-namespace
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              number: 8080
        path: /backend
        pathType: Prefix
      - backend:
          service:
            name: frontend
            port:
              number: 8080
        path: /frontend
        pathType: Prefix
